--- a/SistemaAnt/src/com/usjt/sistemaacademico/TelaLogin.form
+++ b/SistemaAnt/src/com/usjt/sistemaacademico/TelaLogin.form
@@ -116,5 +116,17 @@
         </Constraint>
       </Constraints>
     </Component>
+    <Component class="javax.swing.JLabel" name="jLabel1">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/img/ericalogo.png"/>
+        </Property>
+      </Properties>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="110" y="20" width="180" height="140"/>
+        </Constraint>
+      </Constraints>
+    </Component>
   </SubComponents>
 </Form>
